// --------------------------------------------------------------------------
/// @brief 道具相关协议
// --------------------------------------------------------------------------
syntax = "proto2";
package msg;
import "serialize.proto";

// 购买道具
message C2GW_BuyItem {
    optional uint32 productid = 1;  // 商品id,不是道具id
    optional uint32 num = 2;
}

// 更新背包添加
message GW2C_AddPackageItem {
    optional uint32 itemid = 1;
    optional uint32 num = 2;
}

// 更新背包扣除
message GW2C_RemovePackageItem {
    optional uint32 itemid = 1;
    optional uint32 num = 2;
}

// 更新金币
message GW2C_UpdateGold {
    optional uint32 num = 1;
}

// 更新元宝
message GW2C_UpdateYuanbao {
    optional uint32 num = 1;
}

// 更新钻石
message GW2C_UpdateDiamond {
    optional uint32 num = 1;
}

// 使用道具
message C2GW_UseBagItem {
    optional uint32 itemid = 1;
    optional uint32 num = 2;
}

// 更新道具位置信息
message GW2C_UpdateItemPos {
    repeated msg.ItemData items = 1;
}

// 钻石兑换金币
message C2GW_GoldExchange {
    optional uint64 userid = 1;
    optional uint32 diamonds = 2;
}

// 返回
message GW2C_RetGoldExchange {
    optional uint32 gold = 1;       // 增量
}

